modify the order of reviewing activities

--- a/cv/seokhwan-cv.tex
+++ b/cv/seokhwan-cv.tex
@@ -165,7 +165,7 @@ for row in c:
     print r'\end{list1}'
 
 review_list = []
-c.execute('SELECT org FROM ACTIVITY WHERE position = "Reviewer"')
+c.execute('SELECT org FROM ACTIVITY WHERE position = "Reviewer" ORDER BY org')
 for row in c:
   review_list.append(row[0])
 
