Bug fixed for python2

--- a/cv/seokhwan-cv.tex
+++ b/cv/seokhwan-cv.tex
@@ -1,6 +1,6 @@
 \documentclass[margin,line]{res}
 
-\usepackage{pythontex}
+\usepackage[pyfuture=none]{pythontex}
 
 \oddsidemargin -.5in
 \evensidemargin -.5in
@@ -268,8 +268,6 @@ print r'\end{list1}'
 % \item[] I published several Korean journals and conference papers.
 % \item[] Please visit http://seokhwankim.com\\
 % \end{list1}
-
-\newpage
 
 {\bf Patents}\\
 \begin{pycode}
