--- a/cv/seokhwan-cv.tex
+++ b/cv/seokhwan-cv.tex
@@ -295,8 +295,10 @@ print r'\end{list1}'
 \end{pycode}
 
 \section{\sc Skills}
-{\bf Programming Languages:} C, C++, Java, Perl, Python, Ruby\\
-{\bf Operating Systems:} Unix/Linux, Windows\\
+{\bf Programming Languages}: Python, C++, Java\\
+{\bf Machine Learning Toolkits}: scikit-learn, Theano, SVM-Light, CRFsuite\\
+{\bf NLP and IR Toolkits}: NLTK, Stanford CoreNLP, Lucene\\
+{\bf Databases}: MySQL, SQLite, MongoDB\\
 
 \section{\sc References}
 Available upon request
