modified contents and tex file

--- a/cv/seokhwan-cv.tex
+++ b/cv/seokhwan-cv.tex
@@ -87,12 +87,18 @@ print ', '.join(kwd_list)
   % \end{list1}
 \end{list1}
 
-
 \section{\sc Research Experience}
+{\bf Adobe Research}, USA\\
+\vspace{-.3cm}
+\begin{list1}
+\item[] {\em Research Scientist} \hfill {\em July, 2017 -}\\
+  \vspace{-.3cm}
+\end{list1}
+
 {\bf Institute for Infocomm Research (I2R)}, Singapore\\
 \vspace{-.3cm}
 \begin{list1}
-\item[] {\em Scientist} \hfill {\em January, 2012 - present}\\
+\item[] {\em Scientist} \hfill {\em January, 2012 - July, 2017}\\
   \vspace{-.3cm}
   \begin{list1}
   \item[] {\bf SARA project}, Developed a conversational agent for touristic and conference information and released it in the official mobile app for Interspeech 2014.
