--- a/cv/seokhwan-cv.tex
+++ b/cv/seokhwan-cv.tex
@@ -1,4 +1,5 @@
 \documentclass[margin,line]{res}
+\usepackage{pgf,interval}
 
 \usepackage[pyfuture=none]{pythontex}
 
@@ -10,8 +11,6 @@
 % if using pdflatex:
 %\setlength{\pdfpagewidth}{\paperwidth}
 %\setlength{\pdfpageheight}{\paperheight}
-
-
 
 \newenvironment{list1}{
   \begin{list}{\ding{113}}{%
@@ -45,7 +44,7 @@ c.execute('SELECT field, content FROM contact')
 for row in c:
   contact_info[row[0]] = row[1].replace('#', '\#')
 print(r'\begin{tabular}{@{}p{3in}p{4in}}')
-print(r'%s & {\it Office:} %s \\' % (contact_info['department'], contact_info['phone']))
+# print(r'%s & {\it Office:} %s \\' % (contact_info['department'], contact_info['phone']))
 print(r'%s & {\it Mobile:} %s \\' % (contact_info['affiliation'], contact_info['mobile']))
 print(r'%s & {\it E-mail:} %s \\' % (contact_info['address1'], contact_info['email_txt']))
 print(r'%s & {\it WWW:} %s \\' % (contact_info['address2'], contact_info['website']))
@@ -88,51 +87,57 @@ print(', '.join(kwd_list))
 \end{list1}
 
 \section{\sc Research Experience}
+{\bf Amazon Alexa AI}, USA\\
+\vspace{-.3cm}
+\begin{list1}
+\item[] {\em Sr. Machine Learning Scientist} \hfill {\em June 2019 -}\\
+  \vspace{-.3cm}
+\end{list1}
+
 {\bf Adobe Research}, USA\\
 \vspace{-.3cm}
 \begin{list1}
-\item[] {\em Research Scientist} \hfill {\em July, 2017 -}\\
+\item[] {\em Research Scientist} \hfill {\em July 2017 - May 2019}\\
   \vspace{-.3cm}
 \end{list1}
 
 {\bf Institute for Infocomm Research (I2R)}, Singapore\\
 \vspace{-.3cm}
 \begin{list1}
-\item[] {\em Scientist} \hfill {\em January, 2012 - July, 2017}\\
+\item[] {\em Scientist} \hfill {\em January 2012 - July 2017}\\
   \vspace{-.3cm}
-  \begin{list1}
-  \item[] {\bf SARA project}, Developed a conversational agent for touristic and conference information and released it in the official mobile app for Interspeech 2014.
-  \item[] {\bf COLDAR project}, Developed components for multi-lingual natural language understanding and dialog management.
-  \item[] {\bf TIRS project}, Developed components for natural language understanding and database query generation.
-  \end{list1}
+%   \begin{list1}
+%   \item[] {\bf SARA project}, Developed a conversational agent for touristic and conference information and released it in the official mobile app for Interspeech 2014.
+%   \item[] {\bf COLDAR project}, Developed components for multi-lingual natural language understanding and dialog management.
+%   \item[] {\bf TIRS project}, Developed components for natural language understanding and database query generation.
+%   \end{list1}
 \end{list1}
 
 {\bf Max Planck Institute for Informatics (MPI-INF)}, Saarbrucken, Germany\\
 \vspace{-.3cm}
 \begin{list1}
-\item[] {\em Research Intern} \hfill {\em April, 2011 - August, 2011}\\
+\item[] {\em Research Intern} \hfill {\em April 2011 - August 2011}\\
   {\em Advisor: Prof. Gerhard Weikum} \\
   \vspace{-.3cm}
-  \begin{list1}
-    \item[] {\bf DIDO project}, Developed a higher-order noun phrase chunker for recognizing bio-medical entities with environmental contexts.
-  \end{list1}
+%   \begin{list1}
+%     \item[] {\bf DIDO project}, Developed a higher-order noun phrase chunker for recognizing bio-medical entities with environmental contexts.
+%   \end{list1}
 \end{list1}
 
 {\bf Pohang University of Science and Technology (POSTECH)}, Pohang, Korea\\
 \vspace{-.3cm}
 \begin{list1}
-\item[] {\em Research Assistant} \hfill {\em September, 2005 - December, 2011}\\
+\item[] {\em Research Assistant} \hfill {\em September 2005 - December 2011}\\
   {\em Advisor: Prof. Gary Geunbae Lee} \\
   \vspace{-.3cm}
-  \begin{list1}
-    \item[] {\bf Development of Dialog-based Question Answering System for TV contents}, LG Electronics. Developed components for robust natural language understanding.
-    \item[] {\bf Development of Content Recommendation System for Digital TV}, Samsung Electronics. Developed an automatic content feeding component for contentbased recommendation algorithm.
-    \item[] {\bf Semi-supervised Information Extraction for Automatic Content Feeding in Information Access Dialog Systems}, Microsoft Research Asia. Developed an algorithm of semi-supervised information extraction.
-    \item[] {\bf Implementation of Dialog System Components to Upgrade Chatbot}, SK Telecom Co., Ltd. Developed components for natural language understanding and database management.
-    \item[] {\bf Development of Natural Language Dialog System for Database Search and Entertainment}, KT Corporation. Developed named-entity recognizer for natural language understanding.
-  \end{list1}
-\end{list1}
-
+%   \begin{list1}
+%     \item[] {\bf Development of Dialog-based Question Answering System for TV contents}, LG Electronics. Developed components for robust natural language understanding.
+%     \item[] {\bf Development of Content Recommendation System for Digital TV}, Samsung Electronics. Developed an automatic content feeding component for contentbased recommendation algorithm.
+%     \item[] {\bf Semi-supervised Information Extraction for Automatic Content Feeding in Information Access Dialog Systems}, Microsoft Research Asia. Developed an algorithm of semi-supervised information extraction.
+%     \item[] {\bf Implementation of Dialog System Components to Upgrade Chatbot}, SK Telecom Co., Ltd. Developed components for natural language understanding and database management.
+%     \item[] {\bf Development of Natural Language Dialog System for Database Search and Entertainment}, KT Corporation. Developed named-entity recognizer for natural language understanding.
+%   \end{list1}
+ \end{list1}
 
 \section{\sc Teaching Experience}
 {\bf Pohang University of Science and Technology (POSTECH)}, Pohang, Korea\\
@@ -336,9 +341,9 @@ print(r'\end{list1}')
 
 \section{\sc Skills}
 {\bf Programming Languages}: Python, C++, Java\\
-{\bf Machine Learning Toolkits}: scikit-learn, Theano, SVM-Light, CRFsuite\\
-{\bf NLP and IR Toolkits}: NLTK, Stanford CoreNLP, Lucene\\
-{\bf Databases}: MySQL, SQLite, MongoDB\\
+{\bf Machine Learning Toolkits}: PyTorch, TensorFlow, scikit-learn, SVM-Light, CRFsuite\\
+{\bf NLP and IR Toolkits}: NLTK, spaCy, Stanford CoreNLP, Lucene\\
+{\bf Databases}: MySQL, SQLite, MongoDB, Neo4j\\
 
 \section{\sc References}
 Available upon request
