--- a/cv/seokhwan-cv.tex
+++ b/cv/seokhwan-cv.tex
@@ -87,14 +87,14 @@ print(', '.join(kwd_list))
 \end{list1}
 
 \section{\sc Research Experience}
-{\bf Amazon Alexa AI}, USA\\
+{\bf Amazon Alexa AI}, Sunnyvale, CA, USA\\
 \vspace{-.3cm}
 \begin{list1}
 \item[] {\em Sr. Machine Learning Scientist} \hfill {\em June 2019 -}\\
   \vspace{-.3cm}
 \end{list1}
 
-{\bf Adobe Research}, USA\\
+{\bf Adobe Research}, San Jose, CA, USA\\
 \vspace{-.3cm}
 \begin{list1}
 \item[] {\em Research Scientist} \hfill {\em July 2017 - May 2019}\\
