--- a/cv/seokhwan-cv.tex
+++ b/cv/seokhwan-cv.tex
@@ -90,14 +90,16 @@ print(', '.join(kwd_list))
 {\bf Amazon Alexa AI}, Sunnyvale, CA, USA\\
 \vspace{-.3cm}
 \begin{list1}
-\item[] {\em Sr. Machine Learning Scientist} \hfill {\em June 2019 -}\\
+\item[] {\em Principal Applied Scientist} \hfill {\em October 2021 -}\\
+  \vspace{-.3cm}  
+\item[] {\em Senior Applied Scientist} \hfill {\em June 2019 - October 2021}\\
   \vspace{-.3cm}
 \end{list1}
 
 {\bf Adobe Research}, San Jose, CA, USA\\
 \vspace{-.3cm}
 \begin{list1}
-\item[] {\em Research Scientist} \hfill {\em July 2017 - May 2019}\\
+\item[] {\em NLP Research Scientist} \hfill {\em July 2017 - May 2019}\\
   \vspace{-.3cm}
 \end{list1}
 
